# backupmate

./: .backupmate.env.example  .gitignore  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  setup.py
backupmate/: backup.py  cli.py  config.py  logger.py  mariadb.py  restore.py  s3.py  utils.py
tests/: integration_backup_restore.py  test_backup.py  test_cli.py  test_config.py  test_logger.py  test_mariadb.py  test_restore.py  test_s3.py  test_utils.py
