[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backupmate"
version = "0.1.0"
description = "A CLI tool for automating MariaDB backups using Mariabackup and AWS S3"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"
dependencies = [
    "python-dotenv>=0.19.0",
    "boto3>=1.26.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Database",
]

[project.scripts]
backupmate = "backupmate.cli:main"
